Flexible compound components

--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,6 +4,10 @@
 
 Elaborate on your learnings here in `src/exercise/03.md`
 
+- React.Children.map, oly works with direct decendants
+- createContext can drill down into the component
+
+
 ## Background
 
 **One liner:** The Flexible Compound Components Pattern only differs from the
