Prop Collections and Getters

--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -2,6 +2,27 @@
 
 ## 📝 Your Notes
 
+## Call All function
+Take any number of functions, and then it's going to return a function that takes any number of arguments. 
+I don't care what those arguments are. We'll take those functions. For each of those, we'll take that function.
+If that function exists, then we'll call that function with all the args. Basically, it's a function that I can 
+call passing any number of functions that will return a function that calls all those functions. 
+
+```JavaScript 
+function callAll(...fns) {
+      return (...args) => {
+      fns.forEach(fn => {
+      fn && fn(...args)
+    })
+  }
+}
+```
+
+Example Usage of Call All function
+```JavaScript 
+onClick: callAll(onClick, toggle),
+```
+
 Elaborate on your learnings here in `src/exercise/04.md`
 
 ## Background
